--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   <body>
 
     <header>
-        <h1>Random quote machine</h1>
+        <h1>RANDOM QUOTE MACHINE</h1>
     </header>
     <div class="box">
         <h2 class="quote"></h2>
         <h3 class="author"></h3>
     </div>
     <div>
-        <button id="getQuote" class="trigger"> Random quote </button>
-        <a href="#" target="_blank" class="tweet"><i class="fa fa-lg fa-twitter"></i> Tweet</a>
+        <button id="getQuote" class="trigger"> RANDOM QUOTE </button>
+        <a href="#" target="_blank" class="tweet wiggle"><i class="fa fa-lg fa-twitter"></i><img src="https://img.icons8.com/cotton/128/000000/twitter.png"></a>
     </div>
     
     <script src="script.js"></script>
